set psl-master to version 1.42 used by bookworm

--- a/lsinitramfs.8
+++ b/lsinitramfs.8
@@ -1,17 +1,19 @@
-.TH LSINITRAMFS 8  "2010/06/16" "Linux" "lsinitramfs manual"
+.TH LSINITRAMFS 8  "2015/12/09" "initramfs\-tools" "System Administration"
 
 .SH NAME
 lsinitramfs \- list content of an initramfs image
 
 .SH SYNOPSIS
 .B lsinitramfs
-.RI [ options ] " <initramfsfile> " [ <initramfsfile> ]
+.RB [ -l ]
+.IR initramfs-file ...
 .br
+.BR lsinitramfs " " -h
 
 .SH DESCRIPTION
 The
 .B lsinitramfs
-command lists the content of given initramfs images. It allows to quickly check
+command lists the content of given initramfs images. It allows one to quickly check
 the content of one (or multiple) specified initramfs files.
 
 .SH OPTIONS
@@ -36,12 +38,19 @@ List content of two initramfs files in verbose mode:
 .PP
 .B lsinitramfs -l /boot/vmlinuz-2.6.31-grml64 /boot/vmlinuz-2.6.33-grml64
 
+.SH BUGS
+.BR lsinitramfs
+cannot deal with multiple-segmented initramfs images, except where an
+early (uncompressed) initramfs with system firmware is prepended to
+the regular compressed initramfs.
+
 .SH AUTHOR
 The initramfs-tools are written by Maximilian Attems <maks@debian.org>
 and numerous others.
 
 .SH SEE ALSO
 .BR
-.IR initramfs-tools (8),
+.IR initramfs-tools (7),
 .IR mkinitramfs (8),
+.IR unmkinitramfs (8),
 .IR update-initramfs (8).
