--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,61 @@
+initramfs-tools (0.129) unstable; urgency=medium
+
+  * Some systems that do not support suspend-to-disk (hibernation) will
+    require a configuration change to explicitly disable this.
+
+    From version 0.128, the boot code waits for a suspend/resume device
+    to appear, rather than checking just once.  If the configured or
+    automatically selected resume device is not available at boot time,
+    this results in a roughly 30 second delay.
+
+    You should set the RESUME variable in
+    /etc/initramfs-tools/conf.d/resume or
+    /etc/initramfs-tools/initramfs.conf to one of:
+
+    - auto - select the resume device automatically
+    - none - disable use of a resume device
+    - UUID=<uuid> - use a specific resume device (by UUID)
+    - /dev/<name> - use a specific resume device (by kernel name)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 20 Apr 2017 23:21:32 +0100
+
+initramfs-tools (0.121~rc1) unstable; urgency=medium
+
+  * If initramfs-tools is configured to use busybox but it is not
+    installed, mkinitramfs will now fail.  Previously it would quietly use
+    klibc instead, sometimes producing a broken initramfs.  You may need
+    to modify /etc/initramfs-tools/initramfs.conf or install busybox when
+    upgrading.
+  * Support for loop-aes has been removed.  If you use loop-aes encryption
+    for the root or /usr filesystem, you will need to switch to cryptsetup.
+    See the 'loop-AES extension' section in cryptsetup(8).
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 22 Dec 2015 21:56:40 +0000
+
+initramfs-tools (0.119) unstable; urgency=medium
+
+  * The initramfs will now run fsck on the root filesystem before
+    mounting it.  If the chosen init program is systemd and there is a
+    separate /usr filesystem, it will also fsck and mount /usr.
+  * If /usr is a separate filesystem on a RAID device and the INITRDSTART
+    setting in /etc/default/mdadm is not 'all', you will need to change it
+    to include that device.
+  * If /usr is a separate filesystem on an LVM logical volume, and the
+    line for /usr in /etc/fstab specifies the device by UUID or LABEL,
+    you must change this line to specify the device using the format
+    /dev/mapper/VG-LV or /dev/VG/LV.
+  * It is no longer possible to bind-mount the /usr filesystem.
+  * If the RTC (real time clock) is set to local time and the local time is
+    ahead of UTC, e2fsck will print a warning during boot about the time
+    changing backward (bug #767040).  You can disable this by putting the
+    following lines in /etc/e2fsck.conf:
+        [options]
+        broken_system_clock=1
+    [As of e2fsprogs version 1.42.13 this message is informational, and
+     no configuration change is required.]
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Apr 2015 01:00:21 +0100
+
 initramfs-tools (0.94) unstable; urgency=low
 
     To improve boot speed and avoid some complications, video drivers are
