--- a/initramfs-tools.7
+++ b/initramfs-tools.7
@@ -1,4 +1,4 @@
-.TH INITRAMFS-TOOLS 8  "2010/06/22" "Linux" "mkinitramfs script overview"
+.TH INITRAMFS-TOOLS 7  "2018/07/18" "initramfs\-tools" "Linux Programmer's Manual"
 
 .SH NAME
 initramfs-tools \- an introduction to writing scripts for mkinitramfs
@@ -22,6 +22,18 @@ mount the partition with that UUID as the root filesystem.
 .TP
 \fB\fI init= "<path to real init>"
 the binary to hand over execution to on the root fs after the initramfs scripts are done.
+
+.TP
+\fB\fI initramfs.clear
+clear screen at the beginning
+
+.TP
+\fB\fI initramfs.runsize
+The size of the \fI/run\fP tmpfs mount point in bytes (suffixes are supported)
+or as percentage of your physical RAM. This parameter is used as the value of
+the size mount option to tmpfs. See
+\fBhttps://www.kernel.org/doc/Documentation/filesystems/tmpfs.txt\fR for
+details. The default is 10%.
 
 .TP
 \fB\fI root= "<path to blockdevice>"
@@ -50,7 +62,7 @@ Use root=/dev/nfs for NFS to kick to in. NFSOPTS can be looked up in
 
 .TP
 \fB\fI ip
-tells how to configure the ip address. Allows to specify an different
+tells how to configure the ip address. Allows one to specify an different
 NFS server than the DHCP server. See Documentation/filesystems/nfsroot.txt
 in any recent Linux source for details. Optional parameter for NFS root.
 
@@ -66,8 +78,9 @@ either local or NFS (affects which initramfs scripts are run, see the "Subdirect
 
 .TP
 \fB\fI resume
-On install initramfs-tools tries to autodetect the resume partition. On success
-the RESUME variable is written to /etc/initramfs-tools/conf.d/resume.
+The resume hook tries to autodetect the resume partition and uses the first
+swap partition as valid guess. It is possible to set the RESUME variable in
+/etc/initramfs-tools/conf.d/resume.
 The boot variable noresume overrides it.
 
 .TP
@@ -100,15 +113,18 @@ panic=<sec> is a documented security feature: it disables the debug shell.
 
 .TP
 \fB\fI debug
-generates lots of output. It writes a log to /dev/.initramfs/initramfs.debug.
+generates lots of output. It writes a log to /run/initramfs/initramfs.debug.
 Instead when invoked with an arbitrary argument output is written to console.
 Use for example "debug=vc".
 
 .TP
 \fB\fI break
-spawns a shell in the initramfs image at chosen run-time
-(top, modules, premount, mount, mountroot, bottom, init).
-The default is premount without any arg.
+spawns a shell in the initramfs image at the chosen phase
+(top, modules, premount, mount, mountroot, bottom, init)
+before actually executing the corresponding scripts
+(see the "Boot scripts" section) or action.  Multiple
+phases may be specified, delimited by commas.
+The default, if no phase is specified, is "premount".
 Beware that if both "panic" and "break" are present,
 initramfs will not spawn any shells but reboot instead.
 
@@ -121,10 +137,14 @@ loads netconsole linux modules with the chosen args.
 loads generic IDE/ATA chipset support on boot.
 
 
-.SH HOOK SCRIPTS
+.SH SCRIPTS
 
 Valid boot and hook scripts names consist solely of alphabetics, numerics,
 dashes and underscores. Other scripts are discarded.
+
+.SS Configuration hook scripts
+These are used to override the user configuration where necessary, for
+example to force use of busybox instead of klibc utilities.
 
 .SS Hook scripts
 These are used when an initramfs image is created and not included in the
@@ -138,11 +158,36 @@ kernel boot in the early user-space before the root partition has been
 mounted.
 
 
+.SH CONFIGURATION HOOK SCRIPTS
+
+Configuration hook scripts can be found in
+/usr/share/initramfs-tools/conf-hooks.d.  They are sourced by
+mkinitramfs after the configuration files in /etc and before running
+any hook scripts.  They can override any of the variables documented
+in \fIinitramfs.conf\fR(5), but this should be done only if absolutely
+necessary.  For example, if a package's boot script requires commands
+not provided by klibc-utils, it should also install a configuration
+hook that sets \fBBUSYBOX=y\fR.
+
+
+.SH HOOK SCRIPTS
+
 Hooks can be found in two places: /usr/share/initramfs-tools/hooks and
 /etc/initramfs-tools/hooks. They are executed during generation of the
 initramfs-image and are responsible for including all the necessary components
 in the image itself. No guarantees are made as to the order in which the
 different scripts are executed unless the prereqs are setup in the script.
+Please notice that PREREQ is only honored inside a single directory.  So first
+the scripts in /usr/share/initramfs-tools are ordered according to their PREREQ
+values and executed. Then all scripts in /etc/initramfs-tools are ordered
+according to \fBtheir\fR PREREQ values and executed. This mean that currently
+there is no possibility to have a local script (/etc/initramfs-tools) get
+executed before one from the package (/usr/share/initramfs-tools).
+
+If a hook script requires configuration beyond the exported variables
+listed below, it should read a private configuration file that is
+separate from the /etc/initramfs-tools directory.  It \fImust not\fR
+read initramfs-tools configuration files directly.
 
 .SS Header
 In order to support prereqs, each script should begin with the following lines:
@@ -222,27 +267,41 @@ copy_modules_dir kernel/drivers/ata
 .RE
 
 .SS Including binaries
-If you need to copy binaries to the initramfs module, a command like this
-should be used:
+If you need to copy an executable or shared library to the initramfs
+module, use a command like this:
 .PP
 .RS
 copy_exec /sbin/mdadm /sbin
 .RE
 
-mkinitramfs will automatically detect which libraries the executable depends on
+mkinitramfs will automatically detect which libraries it depends on
 and copy them to the initramfs. This means that most executables, unless
 compiled with klibc, will automatically include glibc in the image which will
 increase its size by several hundred kilobytes.
+
+.SS Including a system firmware preimage (early initramfs)
+If you need to prepend data to the initramfs image, you need to prepare it
+in a file, and call the \fB\fIprepend_earlyinitramfs\fR function.  The file
+can be disposed of as soon as the function returns.
+
+.B Example:
+.nf
+TEMP_FILE=$(mktemp ...)
+  ...
+prepend_earlyinitramfs ${TEMP_FILE}
+rm -f ${TEMP_FILE}
+
+.RE
 
 .SS Exported variables
 mkinitramfs sets several variables for the hook scripts environment.
 
 .TP
 \fB\fI MODULESDIR
-corresponds to the linux-2.6 modules dir.
+corresponds to the linux modules dir.
 .TP
 \fB\fI version
-is the $(uname \-r) linux-2.6 version against mkinitramfs is run.
+is the $(uname \-r) linux version against mkinitramfs is run.
 .TP
 \fB\fI CONFDIR
 is the path of the used initramfs-tools configurations.
@@ -256,13 +315,12 @@ allows arch specific hook additions.
 \fB\fI verbose
 corresponds to the verbosity of the update-initramfs run.
 .TP
-\fB\fI KEYMAP
-sets if a keymap needs to be added to initramfs.
+\fB\fI BUSYBOX, KEYMAP, MODULES
+are as described in \fIinitramfs.conf\fR(5).
 .TP
-\fB\fI MODULES
-specifies which kind of modules should land on initramfs.
-This setting shouldn't be overridden by hook script, but can guide them
-on how much they need to include on initramfs.
+\fB\fI BUSYBOXDIR
+is the directory where busybox utilities should be installed from, or
+empty if busybox is not being used.
 
 
 .SH BOOT SCRIPTS
@@ -374,14 +432,14 @@ contains the following subdirectories.
 \fB\fI
 init-top
 the scripts in this directory are the first scripts to be executed after sysfs
-and procfs have been mounted and /dev/console and /dev/null have been created.
-No other device files are present yet.
+and procfs have been mounted.
+It also runs the udev hook for populating the /dev tree (udev will keep
+running until init-bottom).
 
 .TP
 \fB\fI
 init-premount
-runs the udev hooks for populating the /dev tree (udev will keep running until
-init-bottom) after modules specified by hooks and /etc/initramfs-tools/modules
+happens after modules specified by hooks and /etc/initramfs-tools/modules
 have been loaded.
 
 .TP
@@ -389,6 +447,15 @@ have been loaded.
 local-top OR nfs-top
 After these scripts have been executed, the root device node is expected to be
 present (local) or the network interface is expected to be usable (NFS).
+
+.TP
+\fB\fI
+local-block
+These scripts are called with the name of a local block device.  After
+these scripts have been executed, that device node should be present.
+If the local-top or local-block scripts fail to create the wanted
+device node, the local-block scripts will be called periodically to
+try again.
 
 .TP
 \fB\fI
@@ -401,14 +468,14 @@ been mounted.
 \fB\fI
 local-bottom OR nfs-bottom
 are run after the rootfs has been mounted (local) or the NFS root share has
-been mounted. udev is stopped.
+been mounted.
 
 .TP
 \fB\fI
 init-bottom
 are the last scripts to be executed before procfs and sysfs are moved to the
 real rootfs and execution is turned over to the init binary which should now be
-found in the mounted rootfs.
+found in the mounted rootfs. udev is stopped.
 
 .SS Boot parameters
 .TP
@@ -449,7 +516,7 @@ if [ ! \-x "/sbin/frobnicate" ]; then
 fi
 
 force_load frobnicator interval=10
-cp /sbin/frobnicate "${DESTDIR}/sbin"
+copy_exec /sbin/frobnicate /sbin
 exit 0
 .fi
 .RE
@@ -504,6 +571,8 @@ Otherwise keep it alone.
 .TP
 \fB\fI ROOTDELAY, ROOTFLAGS, ROOTFSTYPE, IP
 corresponds to the rootdelay, rootflags, rootfstype or ip boot option.
+Use of ROOTDELAY is deprecated; you should implement a \fIlocal-block\fR
+boot script rather than delaying or polling.
 .TP
 \fB\fI DPKG_ARCH
 allows arch specific boot actions.
@@ -532,17 +601,59 @@ is the path where root gets mounted usually /root.
 indicates that a debug log is captured for further investigation.
 
 
+.SH UPDATING THE INITRAMFS FROM ANOTHER PACKAGE
+Package maintainer scripts should not run \fBupdate-initramfs\fR
+directly.  A package that installs hooks for initramfs-tools should
+include a triggers file containing:
+.RS
+.nf
+activate\-noawait update\-initramfs
+.fi
+.RE
+
+Kernel packages must call the kernel hooks as documented in the
+Debian Kernel Handbook.
+
+A package that requires an initramfs to function, but is not a kernel
+package, should include a triggers file containing:
+.RS
+.nf
+activate\-await update\-initramfs
+.fi
+.RE
+
+
+.SH KERNEL HOOKS
+initramfs-tools includes hook scripts that are called by kernel
+packages on installation and removal, so that an initramfs is
+automatically created, updated or deleted as necessary.  The hook
+scripts do nothing if the environment variable \fBINITRD\fR is
+set to \fBNo\fR.  This will be the case for kernel packages
+built with \fBmake deb-pkg\fR and with \fBCONFIG_BLK_DEV_INITRD\fR
+not set in the kernel config, or built with \fBmake-kpkg\fR and not
+using the \fB--initrd\fR option.
+
+
 .SH DEBUG
 It is easy to check the generated initramfs for its content. One may need
 to double-check if it contains the relevant binaries, libs or modules:
 .RS
 .nf
-mkdir tmp/initramfs
-cd tmp/initramfs
-gunzip \-c /boot/initrd.img\-2.6.18\-1\-686 | \\
-cpio \-i \-d \-H newc \-\-no\-absolute\-filenames
+lsinitramfs /boot/initrd.img\-3.16\-3\-amd64
 .fi
 .RE
+
+
+.SH FILES
+.TP
+.I /run/initramfs/fsck.log
+Log of fsck commands run within the initramfs, with their output.
+.TP
+.I /run/initramfs/fsck-root
+Exists only if fsck ran successfully for the root filesystem.
+.TP
+.I /run/initramfs/fsck-usr
+Exists only if fsck ran successfully for the \fI/usr\fR filesystem.
 
 
 .SH AUTHOR
@@ -556,4 +667,5 @@ updated by Maximilian Attems <maks@debian.org>.
 .BR
 .IR initramfs.conf (5),
 .IR mkinitramfs (8),
-.IR update-initramfs(8).
+.IR update-initramfs (8),
+.IR lsinitramfs (8).
