--- a/initramfs.conf.5
+++ b/initramfs.conf.5
@@ -1,4 +1,4 @@
-.TH INITRAMFS.CONF 5  "2010/04/05" "Linux" "initramfs.conf manual"
+.TH INITRAMFS.CONF 5  "2018/07/18" "initramfs\-tools" "File Formats Manual"
 
 .SH NAME
 initramfs.conf \- configuration file for mkinitramfs
@@ -13,7 +13,7 @@ or a comment. The value of an variable is assigned by an statement
 of the form: \fIname\fP=[\fIvalue\fP]
 
 Configuration options can be broken out into configuration snippets and
-placed in individual files in the /etc/mkinitramfs/conf.d directory.  Files
+placed in individual files in the /etc/initramfs-tools/conf.d directory.  Files
 in this directory are always read \fBafter\fP the main configuration file,
 so you can override the settings in the main config file without editing it
 directly.
@@ -22,16 +22,24 @@ directly.
 .TP
 \fB MODULES
 Specifies the modules for the initramfs image.
+
+Modules listed in \fI/etc/initramfs-tools/modules\fP and
+\fI/usr/share/initramfs-tools/modules.d/*\fP are always included in the
+initramfs, and are loaded early in the boot process.
+
+
+\fIlist\fP doesn't load any additional modules at boot time, other than those
+listed in the above files.
+
+\fImost\fP adds most file system, all ata, sata, scsi and usb drivers.
+
+\fIdep\fP tries to guess which modules are necessary for the running box and
+only adds those modules.
+
+\fInetboot\fP adds the base and network modules, but skips block devices.
+
+
 The default setting is \fImost\fP.
-
-\fImost\fP adds most file system, all ide, sata, scsi and usb drivers.
-
-\fIdep\fP tries to guess which modules are necessary for the running box.
-
-\fInetboot\fP adds the base modules, network modules, but skips block devices.
-
-\fIlist\fP includes only modules from the additional modules list to load them
-early.
 
 .TP
 \fB BUSYBOX
@@ -56,20 +64,53 @@ will default to gzip if the kernel lacks support (CONFIG_RD) or the
 corresponding userspace utility is not present.
 
 .TP
+\fB COMPRESSLEVEL
+Specifies the compression level used for the initramfs image.
+.B mkinitramfs
+will default to 9 for lz4, 9 for zstd, and the builtin defaults for all
+others.
+
+.TP
 \fB UMASK
 Set the umask value of the generated initramfs file.
 Useful to not disclose eventual keys.
 
-.SH NFS VARIABLES
 .TP
 \fB BOOT
-Allows to use an nfs drive as the root of the drive.
+Allows one to use an nfs drive as the root of the drive.
 The default is to boot from \fIlocal\fP media (hard drive, USB stick).
 Set to \fInfs\fP for an NFS root share.
 
 .TP
+\fB RUNSIZE
+The size of the \fI/run\fP tmpfs mount point in bytes (suffixes are supported)
+or as percentage of your physical RAM. This parameter is used as the value of
+the size mount option to tmpfs. See
+\fBhttps://www.kernel.org/doc/Documentation/filesystems/tmpfs.txt\fR for
+details. Can be overridden by an optional \fBinitramfs.runsize=\fR bootarg.
+The default is 10%.
+
+.SH VARIABLES FOR LOCAL BOOT
+.TP
+\fB RESUME
+Specifies the device used for suspend-to-disk (hibernation), which the
+initramfs code should attempt to resume from.  If this is not defined
+or is set to \fIauto\fP,
+.B mkinitramfs
+will automatically select the largest available swap partition.
+Set it to \fInone\fP to disable resume from disk.
+
+.TP
+\fB FSTYPE
+Specifies the filesystem type(s) to support, separated by commas.  If
+this is not defined or is set to \fIauto\fP, \fBmkinitramfs\fP will
+automatically detect the current root and \fI/usr\fP filesystem types.
+
+.SH VARIABLES FOR NFS BOOT
+.TP
 \fB DEVICE
-Specifies the network interface, like eth0.
+Specifies the default network interface to use, like eth0.  The \fIip\fP or
+\fIBOOTIF\fP bootargs may override this.
 
 .TP
 \fB ROOT
@@ -92,6 +133,6 @@ Loosely based on mkinitrd.conf by Herbert Xu.
 
 .SH SEE ALSO
 .BR
-.IR initramfs-tools (8),
+.IR initramfs-tools (7),
 .IR mkinitramfs (8),
 .IR update-initramfs (8).
