--- a/update-initramfs.conf.5
+++ b/update-initramfs.conf.5
@@ -1,10 +1,10 @@
-.TH UPDATE-INITRAMFS.CONF 5  "2010/04/05" "Linux" "update-initramfs.conf manual"
+.TH UPDATE-INITRAMFS.CONF 5  "2010/04/05" "initramfs\-tools" "File Formats Manual"
 
 .SH NAME
 update-initramfs.conf \- configuration file for update-initramfs
 
 .SH DESCRIPTION
-The configuration file allows to disable the update action from
+The configuration file allows one to disable the update action from
 .B update-initramfs.
 
 .SH GENERAL VARIABLES
@@ -30,6 +30,6 @@ Jeff Bailey <jbailey@raspberryginger.com> and numerous others.
 .SH SEE ALSO
 .BR
 .IR initramfs.conf (5),
-.IR initramfs-tools (8),
+.IR initramfs-tools (7),
 .IR mkinitramfs (8),
 .IR update-initramfs (8).
